--- a/src/index.pug
+++ b/src/index.pug
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
-    <head>
+    head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet")
-        title Document
-    </head>
-    <body>
+        title Rizzoma
+    body
         header(class="header")
             div(class="logo")
+                include img/logo.svg
             ul(class="header__menu") 
                 each val, index in ['O нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения']
                     li(class="menu__item")= val
-
             button(class="button-come_in") войти
             button(class="button-registr") зарегистрироваться
-        header
+        footer
+            
+        
 
 
         script(src='./main.js')
-    </body>
