--- a/src/index.pug
+++ b/src/index.pug
@@ -22,23 +22,17 @@ html(lang="en")
                 include img/logo.svg
                 p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации "Отельные взгляды"
 
-            div(class="footer__navifation")
-                ul(class="navigation__menu") <span class="title-menu">навигация</span>
-                    each val, index in ['O нас', 'Новости', 'Служба поддержски', 'Услуги']
-                        li(class="menu__item")= val
-
-            div(class="footer__about-us")
-                ul(class="about-us__menu") <span class="title-menu">о нас</span>
-                    each val, index in ['O сервисе', 'Наша команда', 'Вакансии', 'Инвесторы']
-                        li(class="menu__item")= val
-            
-            div(class="footer__support")
-                ul(class="support__menu") <span class="title-menu">служба поддержки</span>
-                    each val, index in ['Соглашения', 'Сообщества', 'Связь с нами']
-                        li(class="menu__item")= val
+            mixin list(ul, ...items)  
+                ul(class="footer__title-menu")= ul  
+                    each item in items
+                        li(class="title-menu__item")= item
+            +list('НАВИГАЦИЯ', 'O нас', 'Новости', 'Служба поддержки', 'Услуги')
+            +list('О НАС', 'O сервисе', 'Наша команда', 'Вакансии', 'Инвесторы')
+            +list('СЛУЖБА ПОДДЕРЖКИ', 'Соглашения', 'Сообщества', 'Связь с нами')
             
             div(class="footer__sub") <span class="title-menu">подписка</span>
-                p Получайте специальные предложения и новости сервиса
+                p Получайте специальные 
+                p предложения и новости сервиса
                 form(class="footer__form")
                     input(type="text", class="form__input", placeholder="Email")
                     div(class="send")
