--- a/src/main.scss
+++ b/src/main.scss
@@ -50,10 +50,7 @@ body{
         display: inline-block;
 
         margin-left: 20px;
-        padding-top: 7px;
-        padding-bottom: 8px;
-        padding-left: 17px;
-        padding-right: 18px;
+        padding: 7px 18px 8px 17px;
 
         border: 2px solid #BC9CFF;
         border-radius: 22px;
