separate styles header footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,5 +8,5 @@ html(lang="en")
         link(href="main.scss" rel="stylesheet")
         title Rizzoma
     body
-        include header/head.pug
-        include footer/foot.pug
+        include header/header.pug
+        include footer/footer.pug
