--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
+@import 'footer/footer_style';
+@import 'header/header_style';
 
 //      colors
 $color_h1: tomato;
@@ -8,7 +10,7 @@ $menu_item_color: rgba(31, 32, 65, 0.5);
 //      fonts
 $monserrat_font: 'Montserrat', sans-serif;
 $font_size_12: 12px;
-$font_size_14: 14px;
+
 
 html {
     font-family: $monserrat_font;
@@ -19,173 +21,3 @@ body{
     background: $color_header;
 }
 
-//      header
-.header {
-    display: flex;
-
-    margin-bottom: 50px;
-
-    &__logo {
-        display: inline-block;
-
-        margin: 0;
-        margin-left: 140px;
-        margin-top: 15px;
-    }
-
-    &__menu{
-        padding: 0;
-        margin: 0;
-        margin-top: 26px;
-        margin-left: 285px;
-
-        display: inline-block;
-    }
-
-    &__menu-item{
-        padding-left: 20px;
-
-        list-style: none; 
-        display: inline-block;
-
-        color: $menu_item_color;
-        font-style: normal;
-        font-weight: normal;
-        font-size: $font_size_14;
-        line-height: 17px;
-    }
-
-    &__button-come_in {
-        display: inline-block;
-        width: 87px;
-        margin-left: 20px;
-        margin-top: 18px;
-        padding: 7px 18px 8px 17px;
-
-        border: 2px solid #BC9CFF;
-        border-radius: 22px;
-
-        font-family: $monserrat_font;
-        font-style: normal;
-        font-weight: bold;
-        font-size: $font_size_12;
-        line-height: 15px;
-
-        color: #BC9CFF;
-    }
-
-    &__button-registr {
-        display: inline-block;
-
-        margin-top: 18px;
-        margin-left: 20px;
-        padding: 9px 20px 10px 19px;
-
-        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-        border-radius: 22px;
-
-        font-family: $monserrat_font;
-        font-style: normal;
-        font-weight: bold;
-        font-size: $font_size_12;
-        line-height: 15px;
-
-        color: $color_header;
-    }
-}
-
-//      footer
-.footer {
-    display: flex;
-    justify-content: space-around;
-
-    ul {
-        margin: 0;
-        padding: 0;
-    }
-
-    li {
-        padding-top: 20px;
-    }
-
-    &__foot-logo{
-
-        .first_paragraph {
-            padding-top: 20px;
-        }
-
-        p {
-            margin: 0;
-
-            font-style: normal;
-            font-weight: normal;
-            font-size: $font_size_14;
-            line-height: 24px;
-            color: rgba(31, 32, 65, 0.75);  
-        }
-    }
-
-    &__title-menu{
-        font-style: normal;
-        font-weight: bold;
-        font-size: $font_size_12;
-        line-height: 15px;
-        color: #1F2041;
-    }
-
-    &__menu-item{
-        list-style: none;
-        font-style: normal;
-        font-weight: normal;
-        font-size: $font_size_14;
-        line-height: 17px;
-        color: $menu_item_color;
-    }
-
-    &__sub{
-
-        p {
-            padding: 0;
-
-            font-style: normal;
-            font-weight: normal;
-            font-size: $font_size_14;
-            line-height: 24px;
-            color: $menu_item_color;
-        }
-
-        .form {
-            position: relative;
-
-            .input {
-                padding-left: 15px;
-
-                width: 216px;
-                height: 44px;
-    
-                border: 1px solid rgba(31, 32, 65, 0.25);;
-                box-sizing: border-box;
-                border-radius: 4px;
-
-            }
-
-            input::placeholder {
-                font-family: $monserrat_font;
-                font-style: normal;
-                font-weight: normal;
-                font-size: $font_size_14;
-                line-height: 24px;
-
-                color: rgba(31, 32, 65, 0.25);;
-            }
-
-            .send {
-                display: inline-block;
-
-                position: absolute;
-                right: 39px;
-                top: 13px;  
-            }
-        }
-    }
-}
