--- a/src/index.pug
+++ b/src/index.pug
@@ -5,8 +5,10 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet")
         link(href="main.scss" rel="stylesheet")
         title Rizzoma
     body
         include header/header.pug
+        include content/content.pug
         include footer/footer.pug
