--- a/src/footer/style.scss
+++ b/src/footer/style.scss
@@ -13,6 +13,8 @@ $font_size_14: 14px;
 .footer {
     display: flex;
     justify-content: space-around;
+    margin-top: 104px;
+    margin-bottom: 100px;
 
     ul {
         margin: 0;
