--- a/src/header/header.pug
+++ b/src/header/header.pug
@@ -4,5 +4,5 @@ header(class="header")
     ul(class="header__menu") 
         each val, index in ['O нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения']
             li(class="header__menu-item")= val
-    button(class="header__button-come_in") войти
-    button(class="header__button-registr") зарегистрироваться
+    button(class="header__button button button_main") войти
+    button(class="header__button button button_alternative") зарегистрироваться
