--- a/src/content/search-block/search-block.pug
+++ b/src/content/search-block/search-block.pug
@@ -19,6 +19,7 @@
             input(type="text", placeholder="Сколько гостей")
             .icon-down
                 include ../../img/icon-down.svg
+            include guests-counter/guests-counter.pug
     button(class="button") подобрать номер
         .icon-right
             include ../../img/icon-right.svg
