Добавил заполнение гостей в дропдаун

--- a/src/content/search-block/guests-counter/guests-counter.pug
+++ b/src/content/search-block/guests-counter/guests-counter.pug
@@ -3,32 +3,31 @@
         h3(class="grown-text") взрослые
         .button-count
             div
-                button(class="button-counter") -
+                button(class="button-counter minus") -
             div(class="count")
                 h3 0
             div
-                button(class="button-counter") +
+                button(class="button-counter plus") +
     .child.count
         h3(class="child-text") дети
         .button-count
             div
-                button(class="button-counter") -
+                button(class="button-counter minus") -
             div(class="count")
                 h3 0
             div
-                button(class="button-counter") +
+                button(class="button-counter plus") +
     .baby.count
         h3(class="baby-text") младенцы
         .button-count
             div
-                button(class="button-counter") -
+                button(class="button-counter minus") -
             div(class="count")
                 h3 0
             div
-                button(class="button-counter") +
+                button(class="button-counter plus") +
     .clear-apply
         .clear
             h3 очистить
         .apply
             h3 применить
-        
