--- a/src/content/search-block/search-block.pug
+++ b/src/content/search-block/search-block.pug
@@ -23,4 +23,5 @@
     button(class="button") подобрать номер
         .icon-right
             include ../../img/icon-right.svg
-
+    script
+        include guests-dropdown.js
