--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,7 @@
 @import 'header/style';
 @import 'content/style';
 @import 'content/search-block/style';
+@import 'content/search-block/guests-counter/style';
 
 //      colors
 $color_h1: tomato;
