--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 @import 'content/style';
 @import 'content/search-block/style';
 @import 'content/search-block/guests-counter/style';
+@import 'content/search-block/calendar/style';
 
 //      colors
 $color_h1: tomato;
