--- a/src/header/style.scss
+++ b/src/header/style.scss
@@ -1,7 +1,9 @@
 .header {
     display: flex;
 
-    margin-bottom: 15px;
+    padding-bottom: 15px;
+
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
     &__logo {
         display: inline-block;
