--- a/src/index.pug
+++ b/src/index.pug
@@ -12,3 +12,4 @@ html(lang="en")
         include header/header.pug
         include content/content.pug
         include footer/footer.pug
+        include content/selection/selection.pug
